# lib-core-c

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  NOTICE  README.md
.github/: FUNDING.yml
include/: catalyst.c90.h  catalyst.c99.h  catalyst.h  catalyst.hpp  catmmlib.h  catmmlib.hpp  cattelib.h  cattelib.hpp
src/: catmmlib.cpp  catmmlib.darwin.mm  catmmlib.linux.cpp  catmmlib.win32.cpp  cattelib.cpp
test/: test_catmmlib.cpp  test_cattelib.cpp
